--- a/front-end/templates/shared/header.twig
+++ b/front-end/templates/shared/header.twig
@@ -1,4 +1,7 @@
     <head>
+        <meta charset="utf-8" /> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Raif Pramenkovic GMBh</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="/front-end/resources/css/style.css">
