--- a/front-end/templates/index.twig
+++ b/front-end/templates/index.twig
@@ -212,7 +212,7 @@
                                     </li>
                                     <li>
                                         <img src="/front-end/resources/img/svg/Professional.svg" alt="">
-                                        <p>INOVATIVE</p>
+                                        <p>PROFESSIONAL</p>
                                     </li>
                                     <li class="dots">
                                         <img src="/front-end/resources/img/svg/Tackice.svg" alt="">
@@ -220,7 +220,7 @@
                                     </li>
                                     <li>
                                         <img src="/front-end/resources/img/svg/100.svg" alt="">
-                                        <p>INOVATIVE</p>
+                                        <p>100% GUARANTEED</p>
                                     </li>
                                 </ul>
                             </div>
@@ -385,7 +385,7 @@
                                 </div>
                                 <div class="col-sm-8 col-sm-offset-2 latestProjs">
                                     <div class="col-sm-6 video">
-                                        <img src="/front-end/resources/img/photos/4.jpg" alt="">
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQyMB3-zuT0" frameborder="0" allowfullscreen></iframe>                                    
                                     </div>
                                     <div class="col-sm-6 projectsContainer">
                                         <div class="col-sm-12 projectSingle">
@@ -596,11 +596,11 @@
                         <h5>INNOVATIVE</h5>
                     </div>
                     <div class="col-xs-12 svg-icon">
-                        <img src="/front-end/resources/img/svg/Innovative.svg" alt="">
+                        <img src="/front-end/resources/img/svg/Professional.svg" alt="">
                         <h5>PROFESSIONAL</h5>
                     </div>
                     <div class="col-xs-12 svg-icon">
-                        <img src="/front-end/resources/img/svg/Innovative.svg" alt="">
+                        <img src="/front-end/resources/img/svg/100.svg" alt="">
                         <h5>100% GUARANTEED</h5>
                     </div>
                     <div class="col-xs-12">
@@ -689,7 +689,7 @@
                     <h3>Unsere Projecte</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     <div class="col-xs-12 block-projects">
-                        <img src="/front-end/resources/img/photos/4.jpg" alt="">
+                        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQyMB3-zuT0" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="col-xs-12 block-projects">
                         <div class="col-xs-6 pic-block-projects">
