--- a/front-end/templates/shared/footer.twig
+++ b/front-end/templates/shared/footer.twig
@@ -59,21 +59,23 @@
                         </h4>
                         <ul>
                             <li>
-                                <a href="" class="icoFooter">
+                                <a href="#" class="icoFooter" title="Location" data-toggle="popover" data-trigger="hover" data-content="Some content" data-placement="top" style="display:block;">
                                     <img src="/front-end/resources/img/svg/placeholder.svg" alt="">
-                                    Address
+                                    Koblenzer Straße 77,
+                                      <span>  57555 Mudersbach
+                                    </span>
                                 </a>
                             </li>
                             <li>
                                 <a href="" class="icoFooter">
                                     <img src="/front-end/resources/img/svg/phone.svg" alt="">
-                                    Phone
+                                     02745 93 08 36
                                 </a>
                             </li>
                             <li>
                                 <a href="" class="icoFooter">
                                         <img src="/front-end/resources/img/svg/envelope.svg" alt="">
-                                    Mail
+                                    rauf@pramenkovic.de
                                 </a>
                             </li>
                             <li>
@@ -96,24 +98,27 @@
                             <li>
                                 <a href="" class="icoFooter">
                                     <img src="/front-end/resources/img/svg/placeholder.svg" alt="">
-                                    Address
+                                    
+                                        Koblenzer Straße 77,
+                                      <span>  57555 Mudersbach
+                                    </span>
                                 </a>
                             </li>
                             <li>
                                 <a href="" class="icoFooter">
                                     <img src="/front-end/resources/img/svg/phone.svg" alt="">
-                                    Phone
+                                    02745 93 08 36
                                 </a>
                             </li>
                             <li>
                                 <a href="" class="icoFooter">
                                         <img src="/front-end/resources/img/svg/envelope.svg" alt="">
-                                    Mail
+                                    raif@pramenkovic.de
                                 </a>
                             </li>
                             <li>
                                 <a href="" class="icoFooter">
-                                        <img src="/front-end/resources/img/svg/fb.svg" alt="">
+                                    <img src="/front-end/resources/img/svg/fb.svg" alt="">
                                 </a>
                             </li>
                         </ul>
@@ -124,7 +129,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-xs-12 copyRights">
-                <p>© 2016 Raif Pramenkovic Gmbh. All Rights Reserved</p>
+                <p>© 2017 Raif Pramenkovic Gmbh. All Rights Reserved</p>
             </div>
         </div>
 
