--- a/front-end/templates/shared/navigation.twig
+++ b/front-end/templates/shared/navigation.twig
@@ -57,5 +57,24 @@
             <img src="/front-end/resources/img/svg/menu.svg" alt="">
         </div>
     </div>
+    <div class="menu">
+        <ul>
+            <li>
+                <a href="">Home</a>
+            </li>
+            <li>
+                <a href="">Service</a>
+            </li>
+            <li>
+                <a href="">Gallerie</a>
+            </li>
+            <li>
+                <a href="">Uber uns</a>
+            </li>
+            <li>
+                <a href="">Projecte</a>
+            </li>
+        </ul>
+    </div>
     <div class="line"></div>
 </nav>
