swipable separated in another file

--- a/front-end/templates/index.twig
+++ b/front-end/templates/index.twig
@@ -709,6 +709,7 @@
         <script src="/front-end/resources/js/jquery-1.11.3.min.js" ></script>
         <script src="/front-end/resources/js/jquery.swipable.min.js" ></script>
         <script src="/front-end/resources/js/bootstrap.min.js"></script>
+        <script src="/front-end/resources/js/swipable.js" ></script>
         <script src="/front-end/resources/js/script.js"></script>
     </body>
 </html>
